# bayes-book

./: README.md
bayesnet/: pyproject.toml  test_network.json
bayesnet/app/: main.py
bayesnet/app/api/: networks.py
bayesnet/app/core/: graph_utils.py
bayesnet/app/models/: bayesnet.py
bayesnet/app/services/: inference.py
bayesnet/app/storage/: in_memory.py
bayesnet/bayes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bayesnet/cli/: main.py
bayesnet/networks/: alarm.json  medical.json
bayesnet/tests/: graph_structure.sh  test_infer.sh  test_upload_and_get.sh
latex_book/: Makefile  README.md  main.tex
nextjs-bayes/: package-lock.json  package.json
nextjs-bayes/src/app/: page.tsx
nextjs-bayes/src/components/: GraphViewer.tsx
